--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 callback==0.0.1
+cycler==0.11.0
+easing-functions==1.0.4
+fonttools==4.37.1
+kiwisolver==1.4.4
+matplotlib==3.5.3
+numpy==1.23.4
+packaging==21.3
+Pillow==9.2.0
+pygame==2.1.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+six==1.16.0
 svg-turtle==0.4.1
 svgwrite==1.4.3
